@@ -5,6 +5,8 @@ import caselab.controller.document.payload.DocumentResponse;
 import caselab.domain.entity.Document;
 import caselab.domain.entity.DocumentVersion;
 import java.util.List;
+import java.util.stream.Collectors;
+import org.jetbrains.annotations.NotNull;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
@@ -25,8 +27,8 @@ public interface DocumentMapper {
     DocumentResponse entityToResponse(Document document);
 
     @Named("documentVersionsToDocumentVersionIds")
-    static List<Long> documentVersionsToDocumentVersionIds(List<DocumentVersion> documentVersions) {
-        return documentVersions.stream().map(DocumentVersion::getId).toList();
+    static List<Long> documentVersionsToDocumentVersionIds(@NotNull List<DocumentVersion> documentVersions) {
+        return documentVersions.stream().map(DocumentVersion::getId).sorted().collect(Collectors.toList());
     }
 
     Document requestToEntity(DocumentRequest documentRequest);
